--- a/.github/workflows/container-security.yml
+++ b/.github/workflows/container-security.yml
@@ -23,7 +23,7 @@ jobs:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          allow-no-subscriptions: true  # ✅ This must be inside 'with'
+          allow-no-subscriptions: true
 
       - name: Verify Azure Login
         run: |
@@ -37,16 +37,16 @@ jobs:
 
       - name: Terraform Init
         run: terraform init
-        working-directory: .
+        working-directory: ./terraform
 
       - name: Terraform Validate
         run: terraform validate
-        working-directory: .
+        working-directory: ./terraform
 
       - name: Terraform Plan
         run: terraform plan -out=tfplan
-        working-directory: .
+        working-directory: ./terraform
 
       - name: Terraform Apply
         run: terraform apply -auto-approve tfplan
-        working-directory: .
+        working-directory: ./terraform
