--- a/.github/workflows/container-security.yml
+++ b/.github/workflows/container-security.yml
@@ -44,9 +44,9 @@ jobs:
         working-directory: ./terraform
 
       - name: Terraform Plan
-        run: terraform plan -out=tfplan -var-file="terraform.tfvars"
+        run: terraform plan -out=tfplan"
         working-directory: ./terraform
 
       - name: Terraform Apply
-        run: terraform apply -auto-approve tfplan -var-file="terraform.tfvars"
+        run: terraform apply -auto-approve tfplan"
         working-directory: ./terraform
