--- a/.github/workflows/container-security.yml
+++ b/.github/workflows/container-security.yml
@@ -25,6 +25,11 @@ jobs:
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
           allow-no-subscriptions: true
 
+      - name: Verify Azure Login
+        run: |
+          az account show
+          az group list --output table
+
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
         with:
@@ -32,7 +37,7 @@ jobs:
 
       - name: Terraform Init
         run: terraform init
-        working-directory: ./terraform
+        working-directory: ./terraform # this is now fixed
 
       - name: Terraform Validate
         run: terraform validate
@@ -45,3 +50,4 @@ jobs:
       - name: Terraform Apply
         run: terraform apply -auto-approve tfplan
         working-directory: ./terraform
+        #comment
