--- a/.github/workflows/container-security.yml
+++ b/.github/workflows/container-security.yml
@@ -54,5 +54,6 @@ jobs:
         working-directory: ./terraform
 
       - name: Terraform Apply
-        run: terraform apply -auto-approve tfplan
+        run: terraform plan -out=tfplan -var="subscription_id=${{ secrets.AZURE_SUBSCRIPTION_ID }}" -lock=true
+
         working-directory: ./terraform
