--- a/.github/workflows/container-security.yml
+++ b/.github/workflows/container-security.yml
@@ -6,8 +6,8 @@ on:
       - main
 
 permissions:
-  id-token: write  # Required for OIDC
-  contents: read   # Required for checkout
+  id-token: write
+  contents: read
 
 jobs:
   deploy:
@@ -17,7 +17,7 @@ jobs:
       ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
       ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
       ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-      ARM_USE_OIDC: true  # 👈 This tells Terraform to use federated identity
+      ARM_USE_OIDC: true
 
     steps:
       - name: Checkout code
@@ -30,11 +30,6 @@ jobs:
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
           allow-no-subscriptions: true
-
-      - name: Verify Azure Login
-        run: |
-          az account show
-          az group list --output table
 
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
@@ -49,11 +44,18 @@ jobs:
         run: terraform validate
         working-directory: ./terraform
 
+      - name: Cleanup stale Terraform lock
+        run: |
+          az storage blob delete \
+            --container-name tfstate \
+            --name devsecops-poc2.tfstate.lock \
+            --account-name <your-storage-account-name>
+        continue-on-error: true
+
       - name: Terraform Plan
-        run: terraform plan -out=tfplan -var="subscription_id=${{ secrets.AZURE_SUBSCRIPTION_ID }}" -lock=false
+        run: terraform plan -out=tfplan -var="subscription_id=${{ secrets.AZURE_SUBSCRIPTION_ID }}"
         working-directory: ./terraform
 
       - name: Terraform Apply
-        run: terraform plan -out=tfplan -var="subscription_id=${{ secrets.AZURE_SUBSCRIPTION_ID }}" -lock=true
-
+        run: terraform apply -auto-approve tfplan
         working-directory: ./terraform
