--- a/.github/workflows/container-security.yml
+++ b/.github/workflows/container-security.yml
@@ -54,3 +54,5 @@ jobs:
       - name: Terraform Apply
         run: terraform apply -auto-approve tfplan
         working-directory: ./terraform
+
+        # test
