--- a/.github/workflows/container-security.yml
+++ b/.github/workflows/container-security.yml
@@ -44,7 +44,7 @@ jobs:
       #   working-directory: ./terraform
 
       - name: Terraform Validate
-        run: terraform validate
+        run: terraform validate -lock=false
         working-directory: ./terraform
 
       - name: Terraform Plan
