--- a/.github/workflows/container-security.yml
+++ b/.github/workflows/container-security.yml
@@ -39,12 +39,12 @@ jobs:
         run: terraform init -input=false
         working-directory: ./terraform
 
-      # - name: Force Unlock Stale Terraform Lock (if any)
-      #   run: terraform force-unlock -force af5f0783-b3ba-88f5-b263-137078a876a1
-      #   working-directory: ./terraform
+      - name: Force Unlock Stale Terraform Lock (if any)
+        run: terraform force-unlock -force af5f0783-b3ba-88f5-b263-137078a876a1
+        working-directory: ./terraform
 
       - name: Terraform Validate
-        run: terraform validate -lock=false
+        run: terraform validate 
         working-directory: ./terraform
 
       - name: Terraform Plan
