--- a/.github/workflows/container-security.yml
+++ b/.github/workflows/container-security.yml
@@ -35,30 +35,30 @@ jobs:
         with:
           terraform_version: 1.6.6
 
-      # 🔍 Static Analysis: TFLint
-      - name: Install TFLint
-        run: |
-          curl -s https://raw.githubusercontent.com/terraform-linters/tflint/master/install_linux.sh | bash
-          tflint --version
+      # # 🔍 Static Analysis: TFLint
+      # - name: Install TFLint
+      #   run: |
+      #     curl -s https://raw.githubusercontent.com/terraform-linters/tflint/master/install_linux.sh | bash
+      #     tflint --version
 
-      - name: Run TFLint
-        run: tflint --chdir=./terraform
+      # - name: Run TFLint
+      #   run: tflint --chdir=./terraform
 
-      - name: Install Checkov
-        run: pip install checkov
+      # - name: Install Checkov
+      #   run: pip install checkov
 
-      - name: Run Checkov (Soft Fail)
-        run: checkov -d . --soft-fail --quiet --compact
-        working-directory: ./terraform
-
-      # 🚀 Terraform Execution
-      - name: Terraform Init
-        run: terraform init -input=false
-        working-directory: ./terraform
-
-      # - name: Force Unlock Stale Terraform Lock (if any)
-      #   run: terraform force-unlock -force  a50aa418-c53a-df7d-975d-2109a7875f6f
+      # - name: Run Checkov (Soft Fail)
+      #   run: checkov -d . --soft-fail --quiet --compact
       #   working-directory: ./terraform
+
+      # # 🚀 Terraform Execution
+      # - name: Terraform Init
+      #   run: terraform init -input=false
+      #   working-directory: ./terraform
+
+      - name: Force Unlock Stale Terraform Lock (if any)
+        run: terraform force-unlock -force  5bd82b52-0031-53ae-fe44-8f1ca0ee7c49
+        working-directory: ./terraform
 
       - name: Terraform Validate
         run: terraform validate
