--- a/.github/workflows/container-security.yml
+++ b/.github/workflows/container-security.yml
@@ -51,10 +51,10 @@ jobs:
       #   run: checkov -d . --soft-fail --quiet --compact
       #   working-directory: ./terraform
 
-      # # 🚀 Terraform Execution
-      # - name: Terraform Init
-      #   run: terraform init -input=false
-      #   working-directory: ./terraform
+      # 🚀 Terraform Execution
+      - name: Terraform Init
+        run: terraform init -input=false
+        working-directory: ./terraform
 
       - name: Force Unlock Stale Terraform Lock (if any)
         run: terraform force-unlock -force  5bd82b52-0031-53ae-fe44-8f1ca0ee7c49
